--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,35 @@
   margin: 0;
 }
 
-.App header {
+header {
   width: 100vw;
-  height: 100px;
-  background-color: aliceblue;
+  height: 80px;
+  background-color: darkcyan;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 3rem;
+}
+
+h2 {
+  margin-bottom: 0;
+}
+
+h3 {
+  margin: 0;
+  font-size: 20px;
+  font-weight: 700;
+  color: #000000;
 }
 
 main {
   width: 60vw;
-  margin: 0 auto;
-  text-align: center;
-  height: 60vh;
+  min-height: 50vh;
+  margin: 50px auto;
+  background-color: aliceblue;
+  padding: 20px;
+  border-radius: 20px;
 }
 
 footer {
