--- a/src/main.css
+++ b/src/main.css
@@ -25,19 +25,16 @@ a:hover {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 3px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 15px;
   font-weight: 500;
   font-family: inherit;
-  background-color: #f9f9f9;
+  background-color: darkcyan;
+  color: #ffffff;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  border-color: #ffffff;
 }
