--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ h3 {
 
 main {
   width: 60vw;
-  min-height: 50vh;
+  min-height: 70vh;
   margin: 50px auto;
   background-color: aliceblue;
   padding: 20px;
@@ -38,6 +38,7 @@ footer {
   width: 60vw;
   margin: 0 auto;
   text-align: center;
+  font-weight: bold;
 }
 
 .logo {
